# 2025ECE_20707616

./: .gitignore  README.md  adder_8h.html  adder_8h.js  adder_8h_source.html  files.html  globals.html  globals_func.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html  user.txt
.github/workflows/: doxygen-deploy.yml
Worksheet3/: hello.cpp
Worksheet3/adder_static/lib/: libadder.lib
Worksheet3_dynamic/: adder.h  calc.cpp  libadder.exp  libadder.lib
Worksheet3_dynamic/lib/: maths.exp  maths.lib
Worksheet4/: .gitignore
Worksheet4/Calc_dynamic/: CMakeLists.txt  adder.h
Worksheet4/Calc_static/: adder.h
Worksheet4/hello_cmake/: CMakeLists.txt  hello.cpp
Worksheet5/: CMakeLists.txt  Doxyfile  README.md  adder.cpp  adder.h
Worksheet5/latex/: adder_8h.tex  adder_8h_source.tex  files.tex  refman.tex
Worksheet6/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  mainwindow.cpp  mainwindow.h
Worksheet7/Exercise1/: CMakeLists.txt
Worksheet7/Exercise2/: CMakeLists.txt
Worksheet7/WS6/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  mainwindow.cpp  mainwindow.h
search/: all_0.js  functions_0.js  searchdata.js
